@@ -5,6 +5,7 @@
 - better styling for GraphViz
 - add nodes for recipes too
 - change from GraphViz to GraphViz2 (min Perl now 5.010)
+- drop "reversed" mode - just give GraphViz option to reverse arrows
 
 1.18
 	- stable release with changes in 1.17_50 .. 1.17_51
